# mlops_molecules

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  cloudbuild.yaml  data.dvc  index.html  objects.inv  pyproject.toml  tasks.py  vertex_ai_train.yaml
.dvc/: config
.github/workflows/: compare_best_model.yaml  deploy_best_to_gcp.yaml  deploy_docs.yaml  linting.yaml  loadtest.yaml  pre-commit-update.yaml  tests.yaml
configs/: config.yaml
configs/loadtest/: loadtest.yaml
configs/model/: gnn.yaml
configs/pruning/: default.yaml
configs/training/: standard.yaml
configs/vertex/: job.yaml
configs/wandb/: default.yaml  sweep.yaml
data/: index.html
dockerfiles/: api.dockerfile  monitoring.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: data.md  index.md  model.md  my_api.md  training.md  utilities.md
model/: index.html
models/: best_model.pt
my_api/: index.html
reports/: README.md
search/: search_index.json
src/project_name/: api.py  compare_promote.py  data.py  download_model.py  drift_detection.py  evaluate.py  model.py  monitoring.py  profiling.py  prune.py  quantize.py  train.py  utils.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_api_mock.py
tests/performance_tests/: load_test_api.py
training/: index.html
utilities/: index.html
