[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "project_name"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc-gs>=3.0.2",
    "fastapi==0.128.0",
    "gcsfs==2026.1.0",
    "google-cloud-storage>=2.16.0",
    "hydra-core>=1.3.2",
    "fsspec>=2026.1.0",
    "google-api-python-client>=2.188.0",
    "pathspec==0.12.1",
    "torch==2.6.0",
    "torch-geometric>=2.7.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.24.0",
    "torchao>=0.15.0",
    "httpx>=0.28.1",
    "locust>=2.43.1",
    "requests>=2.32.5",
    "mkdocs-material>=4.8.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.9.10",
    "mkdocstrings[python]==0.25.2",
    "torch-tb-profiler>=0.4.3",
    "notebook>=7.5.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
omit = ["tests/*"]
